--- a/frontend_web/astro/src/Pages/AboutPage/AboutPage.css
+++ b/frontend_web/astro/src/Pages/AboutPage/AboutPage.css
@@ -8,6 +8,7 @@
     background-size: cover;
     background-position: center;
     padding: 100px 20px;
+    filter: hue-rotate(250deg) saturate(1.2) brightness(0.8); /* Adjust the values as needed */
 }
 
 .hero-section::after {
@@ -27,9 +28,6 @@
     z-index: 2;
 }
 
-
-
-
 .hero-title {
     font-size: 3em;
     margin-bottom: 20px;
@@ -41,5 +39,39 @@
     max-width: 600px;
     margin: 0 auto;
     color: white;
-    
+}
+
+.cards-section {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+
+.card {
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    width: 30%;
+    text-align: center;
+}
+
+.card-image {
+    width: 100%;
+    height: 300px;
+    object-fit:fill;
+}
+
+.card-content {
+    padding: 16px;
+}
+
+.card-name {
+    font-size: 1.5em;
+    margin: 10px 0;
+}
+
+.card-course {
+    color: #777;
+    margin-bottom: 10px;
 }
