init 1st draft design login page

--- a/frontend_web/astro/src/Pages/SignUpPage/SignUpPage.css
+++ b/frontend_web/astro/src/Pages/SignUpPage/SignUpPage.css
@@ -134,6 +134,10 @@
     text-decoration: underline;
 }
 
+.already{
+    color: black;
+}
+
 .astro-glow-font {
     font-family: AstroGlow;
     font-weight: 100; 
