--- a/frontend_web/astro/src/Pages/HomePage/HomePage.module.css
+++ b/frontend_web/astro/src/Pages/HomePage/HomePage.module.css
@@ -7,11 +7,13 @@
 .container {
     display: flex;
     flex: 1;
+
 }
 
 .sidebar {
     width: 250px;
     background-color: #390056;
+    
     color: white;
     padding: 1rem;
     height: 100vh;
@@ -35,7 +37,7 @@
     font-size: 1.2rem;
     transition: color 0.2s;
     display: inline-block;
-    padding: 8px 12px;
+    padding: 1px 19px;
     border-radius: 4px;
 }
 
@@ -47,4 +49,35 @@
     margin-left: 260px; 
     padding: 2rem;
     flex: 1;
+    border-radius: 10px;
+    background-image: linear-gradient(160deg, #000000 0%, #653895 100%);
 }
+
+
+.nameTitle{
+    font-size: 30px;
+    color: white    ;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.libraryHeader {
+    display: flex;
+    align-items: center; 
+    gap: 8px; 
+}
+
+
+.libraryLogo{
+    height: 20px;
+    width: auto;
+}
+
+
+
+
+body{
+    background-color: black;
+}
+
+
+
