--- a/frontend_web/astro/src/Pages/LoginPage/LoginPage.module.css
+++ b/frontend_web/astro/src/Pages/LoginPage/LoginPage.module.css
@@ -187,7 +187,7 @@
 }
 
 .social-button:hover {
-  opacity: 0.9;
+  opacity: 0.7;
 }
 
 .google-button {
@@ -206,3 +206,8 @@
   height: 18px;
   margin-right: 8px;
 }
+
+/* 
+.github-icon:hover{
+background-color: white;
+} */
