--- a/frontend_web/astro/src/index.css
+++ b/frontend_web/astro/src/index.css
@@ -1,14 +1,14 @@
 @import "tailwindcss";
 
 
-.active {
+/* .active {
     @apply text-cyan-500;
   }
   
   .active svg {
     @apply text-cyan-500;
   }
-  
+   */
   .bar:nth-child(2) {
     animation-delay: 0.2s;
   }
